--- a/TravelB/src/main/resources/templates/login.html
+++ b/TravelB/src/main/resources/templates/login.html
@@ -137,14 +137,14 @@
                                     <div class="input-label">帳號/Email</div>
                                     <div class="input-area">
                                         <div class="input-img"><img th:src="@{/images/person.png}"></div>
-                                        <input type="email" name="email" maxlength="64" placeholder="請輸入Email" />
+                                        <input type="email" name="email" maxlength="64" value="test1@com.tw" placeholder="請輸入Email" />
                                     </div>
                                 </section>
                                 <section class="form-input-block">
                                     <div class="input-label">密碼</div>
                                     <div class="input-area">
                                         <div class="input-img"><img th:src="@{/images/lock.png}"></div>
-                                        <input type="password" name="password" maxlength="16" placeholder="請輸入密碼" />
+                                        <input type="password" name="password" maxlength="16" value="123" placeholder="請輸入密碼" />
                                     </div>
                                 </section>
                                 <section class="form-link">
