--- a/TravelB/bin/src/main/resources/templates/Find.html
+++ b/TravelB/bin/src/main/resources/templates/Find.html
@@ -8,45 +8,51 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css">
     <!-- Favicon -->
     <link th:href="@{/img/favicon.ico}" rel="icon">
     <!-- Google Web Fonts -->
-    <link rel="preconnect" th:href="@{https://fonts.googleapis.com}">
-    <link rel="preconnect" th:href="@{https://fonts.gstatic.com}" crossorigin>
-    <link th:href="@{https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Nunito:wght@600;700;800&display=swap}"
+
+    <link rel="preconnect" href=https://fonts.googleapis.com>
+    <link rel="preconnect" href=https://fonts.gstatic.com crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Nunito:wght@600;700;800&display=swap"
           rel="stylesheet">
+
     <!-- Icon Font Stylesheet -->
-    <link th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css}" rel="stylesheet">
-    <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css}" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
     <!-- Libraries Stylesheet -->
-    <link th:href="@{/lib/animate/animate.min.css}" rel="stylesheet">
-    <link th:href="@{/owlcarousel/assets/owl.carousel.min.css}" rel="stylesheet">
-    <link th:href="@{/tempusdominus/css/tempusdominus-bootstrap-4.min.css}" rel="stylesheet"/>
+
+    <link href="lib/animate/animate.min.css" rel="stylesheet">
+    <link href="owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet"/>
+
     <!-- Customized Bootstrap Stylesheet -->
-    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Template Stylesheet -->
-    <link th:href="@{/css/style.css}" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
 
     <!-- JavaScript Libraries -->
-    <script th:src="@{https://code.jquery.com/jquery-3.4.1.min.js}"></script>
-    <script th:src="@{https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js}"></script>
-    <script th:src="@{/lib/wow/wow.min.js}"></script>
-    <script th:src="@{/lib/easing/easing.min.js}"></script>
-    <script th:src="@{/lib/waypoints/waypoints.min.js}"></script>
-    <script th:src="@{/lib/owlcarousel/owl.carousel.min.js}"></script>
-    <script th:src="@{/lib/tempusdominus/js/moment.min.js}"></script>
-    <script th:src="@{/lib/tempusdominus/js/moment-timezone.min.js}"></script>
-    <script th:src="@{/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js}"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="lib/wow/wow.min.js"></script>
+    <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/waypoints/waypoints.min.js"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="lib/tempusdominus/js/moment.min.js"></script>
+    <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
+    <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
     <!-- Template Javascript -->
-    <script th:src="@{/js/main.js}"></script>
-	<script th:src="@{/js/session.js}"></script>
-	<script th:src="@{/js/session2.js}"></script>
+
+    <script src="js/main.js"></script>
+	<script src="js/session.js"></script>
+	<script src="js/session2.js"></script>
+
     <style type="text/css">
         .img-fluid {
             max-width: 600px;
@@ -54,26 +60,24 @@
         }
 
         /*圖片敘事的CSS*/
-        p1{
-            width:auto;
+        p1 {
+            width: auto;
             padding: 10px;
-            border:1px solid #4d4d4d;
+            border: 1px solid #4d4d4d;
             overflow: scroll;
             text-overflow: ellipsis;
             display: -webkit-box;
             -webkit-box-orient: vertical;
             -webkit-line-clamp: 5;
-            box-sizing:border-box;
+            box-sizing: border-box;
 
         }
+
         /*圖片卡滑動隱藏*/
         p1::-webkit-scrollbar {
             display: none;
         }
     </style>
-    <body>
-
-</body>
 
 
 
@@ -81,13 +85,17 @@
 </head>
 
 
+
 <body>
-<!-- Spinner Start -->
-<div id="spinner"
-     class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-    <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
-        <span class="sr-only">Loading...</span>
+    <!-- Spinner Start -->
+    <div id="spinner"
+        class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+        <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
+
     </div>
+
 </div>
 <!-- Spinner End -->
 
@@ -105,13 +113,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto py-0">
-                <a th:href="@{'/index'}" class="nav-item nav-link">首頁</a>
-                <a th:href="@{'/find'}" class="nav-item nav-link">商品資訊</a>
+                <a href="index" class="nav-item nav-link">首頁</a>
+                <a href="find" class="nav-item nav-link">商品資訊</a>
                 <div class="nav-item dropdown">
+
                 </div>
             </div>
-          
         </div>
+
     </nav>
 
 
@@ -123,72 +132,32 @@
                     <p class="fs-4 text-white mb-4 ">Tempor erat elitr rebum at clita diam amet diam et eos erat ipsum
                         lorem sit</p>
                     <div class="position-relative w-75 mx-auto ">
-                        <form method="post">
-                            <input name="travelId" class="border-0 rounded-pill w-100 py-3 ps-4 pe-5"
+                       
+                            <input id="travelTown" class="border-0 rounded-pill w-100 py-3 ps-4 pe-5"
                                    style="margin-top: 7px;" placeholder="請輸入想要搜尋的縣市"/>
-                            <button class="btn btn-primary rounded-pill py-2 px-4 position-absolute top-0 end-0 me-2"
+                            <button id="search" class="btn btn-primary rounded-pill py-2 px-4 position-absolute top-0 end-0 me-2"
                                     style="margin-top: 15px;">Search
                             </button>
-                        </form>
+                        
+
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<!--    商品圖片頁-->
-<!--<div id="分頁">-->
-<!--    <a href="#home">Home</a>-->
-<!--    <a href="#news">News</a>-->
-<!--    <a href="#contact">Contact</a>-->
-<!--</div>-->
 
-<!-- 商品資訊 -->
+</div>
+
+
 
 <div class="container-xxl py-5">
-    <div1 class="row col-*-* gy-8 gx-4 justify-content-center">
-            <tr th:each="travel : ${listTravel }">
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s"
-                     style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
-                <div class="package-item">
-                    <div class="overflow-hidden">
-                        <img class="img-fluid" th:src="${travel.picture}" alt="">
-                    </div>
-                    <div class="d-flex border-bottom">
-                        <small class="flex-fill text-center border-end py-2"><i
-                                class="fa fa-map-marker-alt text-primary me-2"></i><span
-                                th:text="${travel.town}"></span></small>
 
-                        <small class="flex-fill text-center border-end py-2"><i
-                                class="fa fa-map-marker-alt text-primary me-2"></i><span
-                                th:text="${travel.name}"></span></small>
-                        <small id="travelvalue" class="flex-fill text-center py-2"><i
-                                class="fa fa-user text-primary me-2"></i><span
-                                th:text="${travel.id}"></span></small>
-                    </div>
-                    <div class="text-center p-4">
-                        <h3 class="mb-0"><span
-                                th:text="${travel.ticket}"></span></h3>
-                        <div class="mb-3">
-                            <small class="fa fa-star text-primary"></small>
-                            <small class="fa fa-star text-primary"></small>
-                            <small class="fa fa-star text-primary"></small>
-                            <small class="fa fa-star text-primary"></small>
-                            <small class="fa fa-star text-primary"></small>
-                        </div>
-                        <p1><span class="overflow-auto" th:text="${travel.introduce}" ></span></p1>
-                        <div class="d-flex justify-content-center mb-2">
-                            <button onclick="myFunction()"  class="btn btn-sm btn-primary px-3 border-end"
-                               style="border-radius: 30px 0 0 30px;">購買
-                                </button>
-                        </div>
-                    </div>
-                </div>
-                </div>
+<div id="dataList" class="row col-*-* gy-8 gx-4 justify-content-center">
 
-            </tr>
-    </div1>
 </div>
+</div>  
+
+
 
 
 <div>&nbsp;</div>
@@ -208,7 +177,101 @@
 <!--    <a th:if="${currentPage < totalPages}" th:href="@{'/page/'+${currentPage + 1}}">Next</a>-->
 <!--    <span th:unless="${currentPage < totalPages}">Next</span>-->
 
+
 </div>
+<script> 
+
+    $(document).ready(function(){
+
+ 
+        datalist(); 
+    });
+    $("#search").click(function(){
+        // console.log(123);
+        // console.log($("#travelTown").val());
+      
+       
+        datalist();
+    });
+
+    
+    function datalist() {
+        var url = "http://localhost:8080/travel/products";
+        if($("#travelTown").val()!=""){
+            console.log("123")
+            url+="?town="+$("#travelTown").val()
+
+        }
+        
+        $.ajax({
+            type:"GET",
+            url: url,
+            dataType : 'json',
+            contentType: "application/json ; charset=utf-8", 
+            success:function(data) {
+                
+                Info(data);
+                console.log("ok");
+               
+            }
+        });
+    }
+    function Info(data){
+        var html =""
+        $.each(data,function(index,item){
+
+          
+       
+        
+        html =  `         
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s"
+                     style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
+                <div class="package-item">
+                    <div class="overflow-hidden">
+                       <img src="${item.picture}" class="img-fluid"  alt="">
+                    </div>
+                    <div class="d-flex border-bottom">
+                        <small class="flex-fill text-center border-end py-2"><i
+                                class="fa fa-map-marker-alt text-primary me-2"></i>
+                                <span>${item.town}</span></small>
+
+                        <small class="flex-fill text-center border-end py-2"><i
+                                class="fa fa-map-marker-alt text-primary me-2"></i>
+                                <span>${item.name}</span></small>
+                        <small id="travelvalue" class="flex-fill text-center py-2"><i
+                                class="fa fa-user text-primary me-2"></i>
+                                <span>${item.id}</span></small>
+                    </div>
+                    <div class="text-center p-4">
+                        <h3 class="mb-0">
+                            <span>${item.ticket}</span></h3>
+                        <div class="mb-3">
+                            <small class="fa fa-star text-primary"></small>
+                            <small class="fa fa-star text-primary"></small>
+                            <small class="fa fa-star text-primary"></small>
+                            <small class="fa fa-star text-primary"></small>
+                            <small class="fa fa-star text-primary"></small>
+                        </div>
+                        <p1><span class="overflow-auto">${item.introduce}</span></p1>
+                        <div class="d-flex justify-content-center mb-2">
+                            <button onclick="myFunction()"  class="btn btn-sm btn-primary px-3 border-end"
+                               style="border-radius: 30px 0 0 30px;">購買
+                                </button>
+                        </div>
+                    </div>
+                </div>
+                </div>
+
+           
+    </div>
+</div>`
+    $("#dataList").append(html);
+    });
+    }
+
+    
+    </script>
+
 
 </body>
 
@@ -236,3 +299,6 @@
 
 <!--    </tr>-->
 <!--</table>-->
+
+
+
