--- a/TravelB/bin/src/main/resources/templates/login.html
+++ b/TravelB/bin/src/main/resources/templates/login.html
@@ -59,12 +59,6 @@
         <div class="row gx-0">
             <div class="col-lg-8 text-center text-lg-start mb-2 mb-lg-0">
 
-                <div class="d-inline-flex align-items-center" style="height: 45px;">
-                    <small class="me-3 text-light"><i class="fa fa-map-marker-alt me-2"></i>123 Street, New York,
-                        USA</small>
-                    <small class="me-3 text-light"><i class="fa fa-phone-alt me-2"></i>+012 345 6789</small>
-                    <small class="text-light"><i class="fa fa-envelope-open me-2"></i>info@example.com</small>
-                </div>
             </div>
             <div class="col-lg-4 text-center text-lg-end">
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
@@ -95,15 +89,14 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <div class="navbar-nav ms-auto py-0">
-                    <a th:href="@{'/index'}" class="nav-item nav-link">首頁</a>
+            <div class="collapse navbar-collapse"  id="navbarCollapse">
+                <div class="navbar-nav ms-auto py-0" id="registerToBack">
+                    <a href="index" class="nav-item nav-link active" >首頁</a>
 
-                    <a th:href="@{'/find'}" class="nav-item nav-link">商品資訊</a>
+                    <a href="find" class="nav-item nav-link">旅遊資訊</a>
                    
 
-                    <div class="nav-item dropdown">
-                    </div>
+                    
                 </div>
                 
             </div>
@@ -277,6 +270,7 @@
     <!-- Template Javascript -->
     <script th:src="@{/js/main.js}"></script>
     <script th:src="@{/js/login.js}"></script>
+    <script src="js/session.js"></script>
 
     <script>
 
