--- a/TravelB/src/main/resources/static/css/style.css
+++ b/TravelB/src/main/resources/static/css/style.css
@@ -172,10 +172,30 @@
 
 /*** Hero Header ***/
 .hero-header {
-    background: linear-gradient(rgba(20, 20, 31, .7), rgba(20, 20, 31, .7)), url(../img/bg-hero.jpg);
+    background: linear-gradient(rgba(20, 20, 31, .7), rgba(20, 20, 31, .7)),url(../img/bg-hero2.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+.hero-header2 {
+    background: linear-gradient(rgba(20, 20, 31, .7), rgba(20, 20, 31, .7)),url(../img/bg-hero2.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.hero-header3 {
+    background: linear-gradient(rgba(20, 20, 31, .7), rgba(20, 20, 31, .7)),url(../img/bg-hero3.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.carousel-item>img{
+    background: linear-gradient(rgba(20, 20, 31, .7), rgba(20, 20, 31, .7));
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
 }
 
 .breadcrumb-item+.breadcrumb-item::before {
@@ -496,13 +516,14 @@ body {
     background-color: white;
     border: 2px solid #4CAF50;
     border-radius: 30px;
-    padding: 20px 100px;
-    font-size: 15px;
+    padding: 10px 100px;
+    font-size: 20px;
     text-align: center !important;
     text-decoration: none;
     display: inline-block;
     transition-duration: 0.4s;
     cursor: pointer;
+    margin: 5px;
 }
 #button-travel:hover {
     background-color: #4CAF50;
