--- a/TravelB/src/main/resources/templates/NO.html
+++ b/TravelB/src/main/resources/templates/NO.html
@@ -33,6 +33,7 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/No404.css" rel="stylesheet">
 
 
     <style type="text/css">
@@ -121,23 +122,20 @@
         </div>
     </div>
 </div>
-</div>
 
 
-
-
-<div id=error th:text="${error}">
+<!--<div class="row pad-top text-center">-->
+<div class="container col-6">
     <div class="row pad-top text-center">
-        <div class="col-md-6 col-md-offset-3 text-center">
+        <div class="align-items-center">
             <h2> 您访问的页面出去玩了! </h2>
             <h5> 您访问的页面不存在，请点击页底的链接返回</h5>
             <span id="error-link">404</span>
-            <h2>! 访问出错 !</h2>
+            <div id=error th:text="${error}"></div>
         </div>
     </div>
-
-
 </div>
+<!--</div>-->
 <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 
 <!-- Navbar & Hero End -->
