--- a/TravelB/src/main/resources/templates/NO.html
+++ b/TravelB/src/main/resources/templates/NO.html
@@ -38,7 +38,7 @@
 
     <style type="text/css">
         #error {
-            color: red;
+            color: #85b717;
             font-size: 48px;
             display: flex;
             justify-content: center;
@@ -109,6 +109,7 @@
             <div class="col-lg-10 pt-lg-5 mt-lg-5 text-center">
                 <h1 class="display-3 text-white mb-3 ">探索你的玩樂世界</h1>
                 <p class="fs-4 text-white mb-4 ">找尋在地體驗或到遠方探險，隨時隨地探索屬於你的玩樂世界</p>
+                        <div id=error th:text="${error}"></div>
                 <div class="position-relative w-75 mx-auto ">
                     <form method="post">
                         <input name="travelId" class="border-0 rounded-pill w-100 py-3 ps-4 pe-5"
@@ -116,26 +117,18 @@
                         <button class="btn btn-primary rounded-pill py-2 px-4 position-absolute top-0 end-0 me-2"
                                 style="margin-top: 15px;">搜尋
                         </button>
+<!--                        <i class="bi bi-exclamation-triangle display-1 text-primary"></i>-->
+<!--                        <h1 class="display-1" id="error-link">404</h1>-->
+<!--                        <h1 class="mb-4" id="E">找不到網頁</h1>-->
+<!--                        <p class="mb-4">很抱歉，您要查找的頁面在我們的網站上不存在！ 也許去我們的主頁或嘗試使用搜索？</p>-->
+<!--                        <a class="btn btn-primary rounded-pill py-3 px-5" href="find">返回</a>-->
+
                     </form>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-
-<!--<div class="row pad-top text-center">-->
-<div class="container col-6">
-    <div class="row pad-top text-center">
-        <div class="align-items-center">
-            <h2> 您访问的页面出去玩了! </h2>
-            <h5> 您访问的页面不存在，请点击页底的链接返回</h5>
-            <span id="error-link">404</span>
-            <div id=error th:text="${error}"></div>
-        </div>
-    </div>
-</div>
-<!--</div>-->
 <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 
 <!-- Navbar & Hero End -->
