--- a/TravelB/src/main/resources/templates/index.html
+++ b/TravelB/src/main/resources/templates/index.html
@@ -92,28 +92,6 @@
 
             </div>
         </nav>
-        <!-- <div id="carousel123" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item " data-interval="10000">
-                    <img src="img/bg-hero.jpg" class="d-block w-100" alt="">
-                </div>
-                <div class="carousel-item active" data-interval="2000">
-                    <img src="img/bg-hero2.jpg" class="d-block w-100" alt="">
-                </div>
-                <div class="carousel-item">
-                    <img src="img/bg-hero3.jpg" class="d-block w-100" alt="">
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#carousel123" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carousel123" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div> -->
-
         <div class="container-fluid bg-primary py-5 mb-5 hero-header">
             <div class="container py-5">
                 <div class="row justify-content-center py-5">
@@ -135,7 +113,7 @@
                 </div>
             </div>
         </div>
-        
+
     </div>
     <!-- Navbar & Hero End -->
 
@@ -197,7 +175,7 @@
                 <div class="col-lg-7 col-md-6">
                     <div class="row g-3">
                         <div class="col-lg-12 col-md-12 wow zoomIn" data-wow-delay="0.1s">
-                            <a class="position-relative d-block overflow-hidden" href="">
+                            <a class="position-relative d-block overflow-hidden" onclick="goToTainan()">
                                 <img class="img-fluid" src="images/台南.jpg" alt="">
                                 <div
                                     class="bg-white text-primary fw-bold position-absolute bottom-0 end-0 m-3 py-1 px-2">
@@ -205,7 +183,7 @@
                             </a>
                         </div>
                         <div class="col-lg-6 col-md-12 wow zoomIn" data-wow-delay="0.3s">
-                            <a class="position-relative d-block overflow-hidden" href="">
+                            <a class="position-relative d-block overflow-hiddessn" onclick="goToTaichung()">
                                 <img class="img-fluid" src="images/台中.jpg" alt="">
                                 <div
                                     class="bg-white text-primary fw-bold position-absolute bottom-0 end-0 m-3 py-1 px-2">
@@ -213,7 +191,7 @@
                             </a>
                         </div>
                         <div class="col-lg-6 col-md-12 wow zoomIn" data-wow-delay="0.5s">
-                            <a class="position-relative d-block overflow-hidden" href="">
+                            <a class="position-relative d-block overflow-hidden" onclick="goToTaoyuan()">
                                 <img class="img-fluid" src="images/桃園.jpg" alt="">
                                 <div
                                     class="bg-white text-primary fw-bold position-absolute bottom-0 end-0 m-3 py-1 px-2">
@@ -223,7 +201,7 @@
                     </div>
                 </div>
                 <div class="col-lg-5 col-md-6 wow zoomIn" data-wow-delay="0.7s" style="min-height: 350px;">
-                    <a class="position-relative d-block h-100 overflow-hidden" href="">
+                    <a class="position-relative d-block h-100 overflow-hidden" onclick="goToYunlin()">
                         <img class="img-fluid position-absolute w-100 h-100" src="images/雲林.jpg" alt=""
                             style="object-fit: cover;">
                         <div class="bg-white text-primary fw-bold position-absolute bottom-0 end-0 m-3 py-1 px-2">
@@ -340,25 +318,9 @@
     <script src="js/session.js"></script>
     <script src="js/find.js"></script>
     <script>
-        function goToFind() {
-            document.location.href = "http://localhost:8080/travel/find";
-        }
-        function goToCity() {
-            var cityName = {
-                travelId: document.getElementById("cityName").innerText,
-            };
-            console.log(cityName.travelId);
-            $.ajax({
-                type: "POST",
-                url: "http://localhost:8080/travel/find",
-                data: cityName,
-                contentType: "application/x-www-form-urlencoded",
-                success: (data) => {
 
-                    console.log(data);
-                }
-            });
-        }
+       
+
 
     </script>
 </body>
