--- a/TravelB/src/main/resources/templates/Find.html
+++ b/TravelB/src/main/resources/templates/Find.html
@@ -141,7 +141,7 @@
                     </div>
                     <div class="modal-footer">
                         <div><button class="clear-cart btn btn-danger">清除購物車</button></div>
-                        <button onclick="myFunction()" type="button" class="btn btn-primary">立即下定</button>
+                        <button onclick="myFunction(cartArray)" type="button" class="btn btn-primary">立即下定</button>
 
                     </div>
                 </div>
@@ -230,7 +230,7 @@
 <script src="js/main.js"></script>
 <script src="js/session.js"></script>
 <script src="js/session2.js"></script>
-<script src="js/shopcart.js"></script>
+<!--<script src="js/shopcart.js"></script>-->
 <script src="js/shopcart2.js"></script>
 <script src="js/find.js"></script>
 
