--- a/TravelB/src/main/resources/templates/CIC.html
+++ b/TravelB/src/main/resources/templates/CIC.html
@@ -118,9 +118,10 @@
 
 
 <!-- 商品資訊 -->
-<!--<div id="selectItemOrder">-->
-<!--</div>-->
-<div id="content" class="section-padding">
+<div id="selectItemOrder">
+    
+</div>
+<!-- <div id="content" class="section-padding">
     <div class="container">
         <div class="row">
             <div class="col-sm-12 col-md-8 col-lg-9">
@@ -155,7 +156,7 @@
                                             商品詳細
                                         </a>
                                     </td>
-                                  <!--購物車-->
+                                  購物車
                                     <td class="photo"><img class="img-fluid" src=""
                                                            alt=""></td>
                                     <td data-title="Title">
@@ -167,9 +168,9 @@
                                             class="adstatus adstatusactive">active</span></td>
                                     <td data-title="Price">
                                         <h3>139$</h3>
-                                    </td>
+                                    </td>-->
                                    <!--按鈕-->
-                                    <td data-title="Action">
+                                    <!-- <td data-title="Action">
                                         <div class="btns-actions">
                                             <a class="btn-action btn-view" href="#"><i class="lni-eye">顯示</i></a>
                                             <a class="btn-action btn-delete" href="#"><i class="lni-trash">刪除</i></a>
@@ -179,9 +180,12 @@
 
                                 </tbody>
                             </table>
-                                  <!--商品資訊下列選單-->
+                                  商品資訊下列選單
                                 <div class="collapse" id="collapseExample">
                                     <div class="card card-body">
+                                      
+
+                                                                                    </div>
                                         商品資訊!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
                                     </div>
                                 </div>
@@ -190,9 +194,9 @@
                 </div>
             </div>
         </div>
-    </div>
-</div>
-
+    </div> 
+</div> 
+  -->
 
 </body>
 
