--- a/TravelB/src/main/resources/templates/Find.html
+++ b/TravelB/src/main/resources/templates/Find.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
 
 <head>
     <meta charset="utf-8">
@@ -102,7 +102,7 @@
                 </div>
             </div>
         </nav>
-        <a><button  type="button" class="btn btn-primary rounded-pill shopping-cart" style="margin-top: 15px;" data-bs-toggle="modal" data-bs-target="#cart"><img alt="X" src="img/cart.jpg" width="25px" height="25px" > <span class="total-count"></span></button></a>
+        <a><button  type="button" class="btn btn-primary rounded-pill shopping-cart" style="margin-top: 15px;" data-bs-toggle="modal" data-bs-target="#cart"><i class="bi bi-cart4 fa-lg"></i> <span class="total-count"></span></button></a>
 
 
 
@@ -128,6 +128,7 @@
     </div>
 </div>
 
+    <!-- CIC_Modal -->
     <div class="modal fade" id="cart" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
          aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
@@ -149,12 +150,12 @@
                 </div>
                 <div class="modal-footer">
                     <div><button class="clear-cart btn btn-danger">清除購物車</button></div>
-                    <button onclick="myFunction(cartArray)" type="button" class="btn btn-primary">立即下訂</button>
+                    <button onclick="myFunction(cartArray)" type="button" class="btn btn-primary">立即下定</button>
                 </div>
             </div>
         </div>
     </div>
-    </div>
+
 
 <div class="container-xxl py-5">
     <div class="container-xxl py-5">
@@ -262,8 +263,6 @@
                             <div class="row">
                                 <div class="col-md-4 col-sm-12">
                                     <ul class="list-unstyled">
-                                        <li>旅遊產品由 酷遊天國際旅行社股份有限公司 提供</li>
-                                        <li>代表人：許嘉恆</li>
                                         <li>統一編號：00000000</li>
                                         <li>旅行業註冊編號：交觀綜第 000000 號</li>
                                         <li>品保協會會員編號：0000</li>
