--- a/TravelB/src/main/resources/templates/login.html
+++ b/TravelB/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="zh-TW" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="utf-8">
@@ -27,6 +27,7 @@
     <link th:href="@{/lib/animate/animate.min.css}" rel="stylesheet">
     <link th:href="@{/owlcarousel/assets/owl.carousel.min.css}" rel="stylesheet">
     <link th:href="@{/tempusdominus/css/tempusdominus-bootstrap-4.min.css}" rel="stylesheet" />
+
 
 
     <!-- Customized Bootstrap Stylesheet -->
@@ -102,6 +103,7 @@
             </div>
         </nav>
 
+
         <div class="container-fluid bg-primary py-5 mb-5 hero-header3">
             <div class="container py-5">
                 <div class="row justify-content-center py-5">
@@ -128,6 +130,7 @@
                                     <span>還不是會員?</span><a th:href="@{/register}">立即註冊</a>
                                 </section>
                                 <button class="login-form" type="submit" onclick="login()">登入</button>
+
                             </div>
                         </section>
 
@@ -248,8 +251,6 @@
                             <div class="row">
                                 <div class="col-md-4 col-sm-12">
                                     <ul class="list-unstyled">
-                                        <li>旅遊產品由 酷遊天國際旅行社股份有限公司 提供</li>
-                                        <li>代表人：許嘉恆</li>
                                         <li>統一編號：00000000</li>
                                         <li>旅行業註冊編號：交觀綜第 000000 號</li>
                                         <li>品保協會會員編號：0000</li>
