--- a/TravelB/src/main/resources/templates/NO.html
+++ b/TravelB/src/main/resources/templates/NO.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
 
 <head>
     <meta charset="utf-8">
@@ -222,8 +222,6 @@
                             <div class="row">
                                 <div class="col-md-4 col-sm-12">
                                     <ul class="list-unstyled">
-                                        <li>旅遊產品由 酷遊天國際旅行社股份有限公司 提供</li>
-                                        <li>代表人：許嘉恆</li>
                                         <li>統一編號：00000000</li>
                                         <li>旅行業註冊編號：交觀綜第 000000 號</li>
                                         <li>品保協會會員編號：0000</li>
