--- a/TravelB/src/main/resources/templates/memberCentre.html
+++ b/TravelB/src/main/resources/templates/memberCentre.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="zh-TW" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="utf-8">
@@ -343,10 +343,10 @@
     <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
-                <footer id="footer" class="">
+                <footer id="footer1" class="">
                     <div class="container">
                         <div class="footer_links row homepage_footer_links">
-                            <div class="col-md-3 col-sm-6" id="footer-know-Tourist">
+                            <div class="col-md-3 col-sm-6" id="footer-know-Tourist1">
                                 <h4>認識Tourist</h4>
                                 <ul class="list-unstyled">
                                     <li class="p"><a target="_blank" rel="noopener" href="https://event.kkday.com/zh-tw/about/about">關於Tourist</a></li>
@@ -358,7 +358,7 @@
                             </div>
                             <!-- ./col -->
 
-                            <div class="col-md-3 col-sm-6" id="footer-for-travellers">
+                            <div class="col-md-3 col-sm-6" id="footer-for-travellers1">
                                 <h4>給旅人</h4>
                                 <ul class="list-unstyled">
                                     <li class="p"><a target="_blank" rel="noopener" href="https://event.kkday.com/zh-tw/about/why-kkday">三大保證</a></li>
@@ -373,7 +373,7 @@
                             </div>
                             <!-- ./col -->
 
-                            <div class="col-md-3 col-sm-6" id="footer-for-partner">
+                            <div class="col-md-3 col-sm-6" id="footer-for-partner1">
                                 <h4>Tourist 合作夥伴</h4>
                                 <ul class="list-unstyled">
                                     <li class="p"><a target="_blank" rel="noopener" href="">駐站特派員</a></li>
@@ -421,8 +421,6 @@
                             <div class="row">
                                 <div class="col-md-4 col-sm-12">
                                     <ul class="list-unstyled">
-                                        <li>旅遊產品由 酷遊天國際旅行社股份有限公司 提供</li>
-                                        <li>代表人：許嘉恆</li>
                                         <li>統一編號：00000000</li>
                                         <li>旅行業註冊編號：交觀綜第 000000 號</li>
                                         <li>品保協會會員編號：0000</li>
