--- a/TravelB/src/main/resources/templates/register.html
+++ b/TravelB/src/main/resources/templates/register.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="zh-TW" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="utf-8">
@@ -101,6 +101,7 @@
             </div>
         </nav>
 
+
         <div class="container-fluid bg-primary py-5 mb-5 hero-header3">
             <div class="container py-5">
                 <div class="row justify-content-center py-5">
@@ -135,6 +136,7 @@
                                 <button type="submit" id="btnPostUser" onclick="register()">註冊</button>
                             </div>
                         </section>
+
                     </div>
 
                 </div>
@@ -252,8 +254,6 @@
                             <div class="row">
                                 <div class="col-md-4 col-sm-12">
                                     <ul class="list-unstyled">
-                                        <li>旅遊產品由 酷遊天國際旅行社股份有限公司 提供</li>
-                                        <li>代表人：許嘉恆</li>
                                         <li>統一編號：00000000</li>
                                         <li>旅行業註冊編號：交觀綜第 000000 號</li>
                                         <li>品保協會會員編號：0000</li>
