--- a/TravelB/src/main/resources/templates/CIC.html
+++ b/TravelB/src/main/resources/templates/CIC.html
@@ -46,7 +46,7 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
-
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="js/session.js"></script>
     <script src="js/orderitem.js"></script>
 
