2/17修改商品購買紀錄

--- a/TravelB/src/main/resources/templates/CIC.html
+++ b/TravelB/src/main/resources/templates/CIC.html
@@ -117,10 +117,10 @@
     </div>
 </div>
 
-<h1>購買紀錄</h1>
 
 <!-- 商品資訊 -->
 <div>
+    <h1 class="row mx-0 justify-content-center">購買紀錄</h1>
 <div class="col" id="selectItemOrder">
 
 </div>
