2/17修改商品購買紀錄對其

--- a/TravelB/src/main/resources/templates/memberCentre.html
+++ b/TravelB/src/main/resources/templates/memberCentre.html
@@ -145,7 +145,7 @@
                                     <label class="text">性別</label>
                                     <div class="w3l-div">
                                         <i class="fa fa-users" aria-hidden="true"></i>
-                                        <select id="gender" class="form-control" name="gender"
+                                        <select id="gender" class="w3-select w3-border" name="gender"
                                             th:value="${session.loginEmail.gender}">
                                             <option>男性</option>
                                             <option>女性</option>
